--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!-- 
+    credits:
+    -   John Smilda
+    -   Code Snow
+    -   Per Harold
+    -   Lama Dev
+    -   Freecode camp
+    -   all other youtube developers
+ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,7 +25,7 @@
             <h2 class="title">Grocery Bud</h2>
             <div class="form-control">
                 <input type="text" id="grocery" placeholder="e.g. eggs">
-                <button class="submit-btn">Add Item</button>
+                <button class="submit-btn">Add</button>
             </div>
         </form>
         
